[package]
name = "theine_core"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "theine_core"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.2"
compact_str = "0.7.0"
pyo3 = { version = "0.17.3", features = ["extension-module"] }

[dev-dependencies]
rand = "0.8.5"