[package]
name = "theine_core"
version = "0.4.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "theine_core"
crate-type = ["cdylib"]

[dependencies]
dlv-list = "0.5.2"
pyo3 = { version = "0.17.3", features = ["extension-module"] }
rand = "0.8.5"

[dev-dependencies]
ahash = "0.8.11"
