[package]
name = "theine_core"
version = "0.5.0"
edition = "2025"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "theine_core"
crate-type = ["cdylib"]

[dependencies]
dlv-list = "0.5.2"
pyo3 = { version = "0.24.2", features = ["extension-module"] }
rand = "0.8.5"

[dev-dependencies]
ahash = "0.8.11"
